Google Auth now working properly

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ### Flutter Generated
-
+.txt
 # Miscellaneous
 *.class
 *.lock
@@ -887,3 +887,6 @@ DerivedData/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Ignore Gradle build output directory
+build
