--- a/android/.gitignore
+++ b/android/.gitignore
@@ -857,7 +857,7 @@ $RECYCLE.BIN/
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
-
+.txt
 ## User settings
 xcuserdata/
 
