--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   flutter_map:
   firebase_storage:
   firebase_auth:
-  google_sign_in:
+  google_sign_in: ^6.2.2
   font_awesome_flutter:
   fluttertoast:
   latlong2:
@@ -46,6 +46,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_ui_oauth_google: ^1.3.3
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/Lottie/Animation - 1730745990910.json
+    - assets/WebClientID.txt
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
