--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ### Flutter Generated
 *.txt
+*.env
 # Miscellaneous
 *.class
 *.lock
@@ -887,6 +888,3 @@ DerivedData/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-
-# Ignore Gradle build output directory
-build
