--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore:
+  firebase_ui_oauth_google:
   firebase_core:
   flutter_map:
   firebase_storage:
   firebase_auth:
-  google_sign_in: ^6.2.2
+  google_sign_in:
   font_awesome_flutter:
   fluttertoast:
   latlong2:
   lottie:
+  flutter_dotenv:
   animated_splash_screen:
   flutter:
     sdk: flutter
@@ -46,7 +48,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_ui_oauth_google: ^1.3.3
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,7 @@ flutter:
   assets:
     - assets/Lottie/Animation - 1730745990910.json
     - assets/WebClientID.txt
+    - assets/.env
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
