--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv:
   animated_splash_screen:
   speech_to_text: ^6.0.0
+  flutter_tts: ^3.8.3
   flutter:
     sdk: flutter
 
