--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   lottie:
   flutter_dotenv:
   animated_splash_screen:
+  url_launcher:
   speech_to_text: ^6.0.0
   flutter_tts: ^3.8.3
   flutter:
