--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   cupertino_icons: ^1.0.6
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
